--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,19 @@
 <body>
     <canvas class="webgl"></canvas>
 
-    <section class="section justify-between">
-        <h1>Sebastián Alvarez</h1>
-        <div class="text-[20px] typing-text pixel-8bit">
-            Welcome to my porfolio, Let's create great things together
+    <section class="section flex-col md:flex-row justify-center md:justify-between items-center md:items-center gap-6 md:gap-12 text-center md:text-left">
+       <div>
+           <h1 class="text-[clamp(32px,6vmin,68px)] leading-tight">Sebastián Alvarez</h1>
+           <div class="text-sm">Senior Full Stack Developer</div>
+       </div>
+        <div class="typing-text pixel-8bit text-[clamp(14px,2.2vmin,20px)]">
+            Welcome to my portfolio, let's create great things together.
         </div>
     </section>
-    <section class="section justify-between">
-        <div class="shadow text-[40px]">Technologies and Frameworks</div>
-        <div class="grid grid-cols-3 w-[50%]">
+
+    <section class="section flex-col md:flex-row justify-center md:justify-between items-center md:items-center gap-8 md:gap-12">
+        <div class="shadow text-[clamp(22px,4.5vmin,40px)] leading-tight w-full md:w-[45%]">Technologies and Frameworks</div>
+        <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 sm:gap-6 w-full md:w-[55%] place-items-center">
             <button type="button" class="relative group w-fit h-fit cursor-pointer p-2" aria-label="JavaScript">
                 <img src="./js.png" alt="JavaScript" class="w-[70px] transition-transform group-hover:scale-[1.03] group-focus-visible:scale-[1.03]">
                 <span role="tooltip" class="pointer-events-none absolute left-1/2 top-full z-10 mt-2 w-[min(18rem,90vw)] -translate-x-1/2 rounded-md bg-black/80 px-3 py-2 text-[12px] leading-snug text-[#ffeded] opacity-0 translate-y-1 transition-all duration-150 group-hover:opacity-100 group-hover:translate-y-0 group-focus-visible:opacity-100 group-focus-visible:translate-y-0">
@@ -75,7 +79,7 @@
                 <img src="./tw.webp" alt="Tailwind CSS" class="w-[70px] transition-transform group-hover:scale-[1.03] group-focus-visible:scale-[1.03]">
                 <span role="tooltip" class="pointer-events-none absolute left-1/2 top-full z-10 mt-2 w-[min(18rem,90vw)] -translate-x-1/2 rounded-md bg-black/80 px-3 py-2 text-[12px] leading-snug text-[#ffeded] opacity-0 translate-y-1 transition-all duration-150 group-hover:opacity-100 group-hover:translate-y-0 group-focus-visible:opacity-100 group-focus-visible:translate-y-0">
                     <span class="block font-semibold">Tailwind CSS</span>
-                    <span class="block opacity-90">Atyling for fast, consistent UI.</span>
+                    <span class="block opacity-90">Styling for fast, consistent UI.</span>
                 </span>
             </button>
 
@@ -91,7 +95,7 @@
                 <img src="./ts.png" alt="TypeScript" class="w-[70px] transition-transform group-hover:scale-[1.03] group-focus-visible:scale-[1.03]">
                 <span role="tooltip" class="pointer-events-none absolute left-1/2 top-full z-10 mt-2 w-[min(18rem,90vw)] -translate-x-1/2 rounded-md bg-black/80 px-3 py-2 text-[12px] leading-snug text-[#ffeded] opacity-0 translate-y-1 transition-all duration-150 group-hover:opacity-100 group-hover:translate-y-0 group-focus-visible:opacity-100 group-focus-visible:translate-y-0">
                     <span class="block font-semibold">TypeScript</span>
-                    <span class="block opacity-90">Types to JavaScript for safer, scalable apps.</span>
+                    <span class="block opacity-90">Types for JavaScript for safer, scalable apps.</span>
                 </span>
             </button>
 
@@ -120,28 +124,31 @@
             </button>
         </div>
     </section>
+
     <section class="section flex-none" style="display: block !important;">
-        <div class="flex justify-between">
-            <h2>Agent Core</h2>
-            <div class="w-[50%] text-[20px] shadow p-4">
+        <div class="flex flex-col md:flex-row md:items-start justify-between gap-6 md:gap-10">
+            <h2 class="text-[clamp(24px,5vmin,56px)] leading-tight">Agent Core</h2>
+            <div class="w-full md:w-[55%] text-[clamp(14px,2.2vmin,18px)] shadow p-4 sm:p-6">
                 <div>
                     Agent Core is a project based con Nest, Typescript, MongoDB, LangChain and Cloud services served with docker containers. The purpose of this project is to provide a simple server that can be customized with multiple tools to provide any functionality. Agent Core iniciatilices a new AI Agent based on current configurations in MongoDB. This allows to create different agents for multiple purposes (e.g. Scheduling calendars, Analizing databases, create orders, etc...) for different types of business.
                 </div>
                 <div class="mt-4">
-                    <button id="repo-btn" class="shadow p-2 cursor-pointer m-auto block">Github Repo</button>
+                    <button id="repo-btn" class="shadow p-2 cursor-pointer mx-auto md:mx-0 block w-full sm:w-fit">Github Repo</button>
                 </div>
             </div>
         </div>
-        <div class="w-full mt-10">
-            <video src="./video.mp4" autoplay muted loop playsinline></video>
-            <div class="my-4 text-sm">Email response from Agent Core</div>
-            <img src="./email.png" alt="email response">
+
+        <div class="w-full mt-8 md:mt-10">
+            <video id="agentVideo" class="w-full max-w-[1100px] mx-auto rounded-lg shadow cursor-pointer" src="./video.mp4" autoplay muted loop playsinline></video>
+            <div class="my-4 text-[12px] sm:text-sm opacity-90">Email response from Agent Core</div>
+            <img id="emailPreview" class="w-full max-w-[1100px] mx-auto rounded-lg shadow cursor-zoom-in" src="./email.png" alt="email response">
         </div>
     </section>
+
     <section class="section flex flex-col items-start justify-center gap-6 mt-6">
-        <h2>Contact me</h2>
-        <div class="flex justify-between w-full">
-            <div class="text-[15px] shadow h-fit p-4 w-[50%]">
+        <h2 class="text-[clamp(22px,5vmin,48px)] leading-tight">Contact me</h2>
+        <div class="flex flex-col lg:flex-row justify-between w-full gap-6 lg:gap-10">
+            <div class="text-[clamp(13px,2vmin,15px)] shadow h-fit p-4 sm:p-6 w-full lg:w-[45%]">
                 <div>
                     Ask my agent anything about my profile, also you can ask him to send me an email for you. But if you deside to write me directly here is my email: s.sebas33@outlook.es
                 </div>
@@ -149,10 +156,11 @@
                     Agent Core is capable of scheduling tasks on Google calendar and much more too, but now just the email contact tool is available in this chat.
                 </div>
             </div>
-            <div class="chat-ui shadow p-4 w-full max-w-[640px]">
+
+            <div class="chat-ui shadow p-4 sm:p-6 w-full lg:max-w-[640px]">
                 <div class="text-[16px] mb-3 opacity-90">Ask me anything:</div>
     
-                <div id="chatMessages" class="chat-messages w-full h-[260px] overflow-y-auto p-3 rounded bg-black/20"></div>
+                <div id="chatMessages" class="chat-messages w-full h-[220px] sm:h-[260px] overflow-y-auto p-3 rounded bg-black/20"></div>
     
                 <form id="chatForm" class="mt-3 flex gap-2">
                     <input
