Coregido textos y estilos

--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,11 @@
             <h2 class="text-[clamp(24px,5vmin,56px)] leading-tight">Agent Core</h2>
             <div class="w-full md:w-[55%] text-[clamp(14px,2.2vmin,18px)] shadow p-4 sm:p-6">
                 <div>
-                    Agent Core is a project based con Nest, Typescript, MongoDB, LangChain and Cloud services served with docker containers. The purpose of this project is to provide a simple server that can be customized with multiple tools to provide any functionality. Agent Core iniciatilices a new AI Agent based on current configurations in MongoDB. This allows to create different agents for multiple purposes (e.g. Scheduling calendars, Analizing databases, create orders, etc...) for different types of business.
+                    Agent Core is a project built with NestJS, TypeScript, MongoDB, LangChain, and cloud services, all orchestrated through Docker containers. <br><br>
+
+The goal of Agent Core is to provide a lightweight and extensible server that can be customized with multiple tools to deliver a wide range of functionalities. Based on the current configurations stored in MongoDB, Agent Core initializes a new AI agent dynamically. <br> <br>
+
+This architecture allows the creation of multiple specialized agents for different business needs, such as calendar scheduling, database analysis, order creation, and other domain-specific tasks, making the platform adaptable to various industries. <br> <br>
                 </div>
                 <div class="mt-4">
                     <button id="repo-btn" class="shadow p-2 cursor-pointer mx-auto md:mx-0 block w-full sm:w-fit">Github Repo</button>
